# const_sort_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
const_sort/: Cargo.toml  README.md
const_sort/src/: const_slice_sort_ext.rs  lib.rs
const_sort_rs/: Cargo.toml  README.md
const_sort_rs/src/: const_core_slice_sort_internals.rs  const_slice_sort_ext.rs  const_sort.rs  const_sort_core.rs  fake_usize_ptr.rs  lib.rs  mut_ref_sort.rs  slice_const_split_at.rs  slice_const_split_at_mut.rs  test.rs  utils.rs
